--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
-@media screen and (min-width:768px) and (max-width:991px) {
+@media screen and (min-width:320px) and (max-width:576px) {
+
     .prob {
-        width: 100%;
+        max-width: 100%;
     }
 
 }
